# a_a

./: db.py  docker-compose.yml  main.py  pyproject.toml
docs/source/: conf.py  index.rst
src/: schemas.py
src/conf/: config.py
src/contact/: contact_func.py
src/data_base/: db.py  models.py
src/routes/: contacts.py
src/services/: auth.py  email.py
test/: conftest.py  test_contact.py  test_routes_contacts.py
